[package]
name = "icon"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>", "Brock Szuszczewicz <brock@szu.email>"]
edition = "2021"
publish = false

[dependencies]
cosmic-time = { path = "../..", default-features = false, features = [
    "winit-libcosmic",
    "once_cell",
] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
#rev = "8a86f1857fc7cd0e638b1a5ad768345b1ae200f7"
#git = "https://github.com/wiiznokes/libcosmic"
branch = "master"
default-features = false
features = [
    "winit",
    "smol",
    #"wgpu",
    #"tokio",
    #"multi-window"
    #"a11y",
    #"debug",
    #"serde-keycode",
    #"wayland",
]