[package]
name = "icon"
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[dependencies]
cosmic-time = { path = "../..", default-features = false, features = [
    "libcosmic",
    "once_cell",
] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
branch = "master"
default-features = false
features = [
    "winit",
    "smol",
    "wgpu"
]